[package]
name = "multithreading_test_with_prime_number_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crate for dealing with primes
primal = "0.3.2"
# Cross plattform console clearer
clearscreen = "2.0.1"
